resources/openshift/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: contact
  labels:
    name: contact
