resources/openshift/base/msr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stt-contact-management
  namespace: contact
  labels:
    name: stt-contact-management
    app: stt-contact-management
    monitoring: enabled
spec:
  selector:
    app: stt-contact-management
  type: ClusterIP
  sessionAffinity: ClientIP
  ports:
  - port: 5555
    targetPort: 5555
    name: http
